# ytstrm

./: .gitignore  Cargo.toml
src/: channel.rs  config.rs  main.rs  manager.rs  manifest.rs
src/api/: channels.rs  mod.rs  playlist.rs  settings.rs
src/migrations/: config_to_v2.rs  mod.rs
src/templates/: base.html  channel.html  config.html  mod.rs  playlist.html  progress.html
src/templates/partials/: load_video_sse.html
src/templates/partials/settings/: check_interval_input.html  media_path_input.html  server_address_input.html
