[package]
name = "ytstrm"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
dirs = "6.0.0"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
