[package]
name = "ytstrm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8"
chrono = "0.4.41"
dirs = "6.0.0"
futures = "0.3"
minijinja = { version = "2.10.2", features = ["loader"] }
percent-encoding = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.12.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.4"
